--- a/index.html
+++ b/index.html
@@ -5,24 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap" 
+    rel="stylesheet">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
     <title>Huddle</title>
     <script src="https://kit.fontawesome.com/81721d17ae.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Header -->
     <header class="header">
-        
+        <figure class="header__logo">
+            <img src="./images/logo.svg" alt="Huddle logo">
+        </figure>
     </header>
 
     <!-- Main section -->
     <main class="main">
-
+        <section class="main__image">
+            <figure>
+                <img src="./images/illustration-mockups.svg" alt="illustrative image">
+            </figure>
+        </section>
+        <article class="main__descrption">
+            <h1 class="description__tittle">Build The Community Your Fans Will Love</h1>
+            <p class="description__info">
+                Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.
+            </p>
+        </article>
     </main>
+
     <!-- Footer -->
-
     <footer class="footer">
-
+        <div class="footer__icons-container">
+            <div class="footer__icon">
+                <i class="fab fa-facebook-f"></i>
+            </div>
+            <div class="footer__icon">
+                <i class="fab fa-twitter"></i>
+            </div>
+            <div class="footer__icon">
+                <i class="fab fa-instagram"></i>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
