--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Main section -->
     <main class="main">
         <section class="main__image">
-            <figure>
+            <figure class="main__image__container">
                 <img src="./images/illustration-mockups.svg" alt="illustrative image">
             </figure>
         </section>
