Footer styles and register button. Finished the project

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
                 <img src="./images/illustration-mockups.svg" alt="illustrative image">
             </figure>
         </section>
-        <article class="main__descrption">
+        <article class="main__description">
             <h1 class="description__tittle">Build The Community Your Fans Will Love</h1>
             <p class="description__info">
                 Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.
             </p>
+            <a class="main__register" href="./">Register</a>
         </article>
     </main>
 
