--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/big-phone.css" media="(min-width: 425px)">
+    <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 769px)">
+    <link rel="stylesheet" href="./css/desktop.css" media="(min-width: 1024px)">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap" 
     rel="stylesheet">
